# MailSocial

./: .credits.json  .default_settings.toml  .gitignore  LICENSE.md  MailSocial.spec  README.md  pyproject.toml
.github/workflows/: build_and_release.yml  lints.yml
docs/: PLAN.md  TODO.md
src/: app.py  testdriver.py  utils.py
src/components/: about_window.py  chat_interface.py  chat_list.py  utility_bar.py
src/components/about/: contributors.py  feedback_tab.py  info_tab.py  licenses_tab.py  window.py
src/components/chat/: input.py  messages.py  widget.py
src/components/compose/: window.py
src/components/settings/: appearance.py  window.py
src/core/: contributions.py  credits.py  logging.py
src/core/models/: chat.py  member.py  message.py
tests/ui/: test_app.py
