[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailsocial"
version = "0.1.0"
description = "An email client with social media and instant messaging features."
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "James David Clarke", email = "james@jamesdavidclarke.com" }
]
dependencies = [
    "customtkinter"
]

[project.scripts]
mailsocial = "src.app:main"
